# data_seb

./: .gitignore  AGENTS.md  CONTRACTS.md  INDEX.md  Principales_variables.xlsx  bcra_variables_20260307_1017.xlsx  main.py  pyproject.toml  setup.py
data_seb/: __init__.py  bcra.py  cod.py  cpi.py  dolar.py  ipc.py  ipc_se.py  pbi.py
data_seb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_seb/tools/: exporter.py
tests/: test_cod.py  test_ipc.py  test_ipc_se.py
