[project]
name = "data-seb"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
