[project]
name = "data-seb"
version = "0.2.2"
description = "Python library for fetching and processing economic data from the BCRA (Central Bank of Argentina) and INDEC, including monetary aggregates, exchange rates, and inflation indicators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
[project.scripts]
export-bcra = "data_seb.tools.exporter:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
